--- a/style.css
+++ b/style.css
@@ -44,14 +44,15 @@ body{
 	width: 1%;
 	height: 22%;
 	top: 17%;
-    left: 48.9%;
+    	left: 48.9%;
 	opacity: 0.8;
-    background-color: red;
+    	background-color: red;
 }
 #dot{
-    width: 3%;
-	height: 25px;
+    	align-items: center;
+	justify-content: center;
 	top: 38%;
-	left: 48%;
-    background-color: gold;
+	width: 20px;
+	height: 20px;
+   	background-color: gold;
 }
